--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@ select.input-command {
 <script src="./ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script type="text/javascript">
     var CPABUILDSETTINGS={"it":1684070,"key":"60473","testing":1};
-    var forward="";
-    CPABUILDSETTINGS.onComplete=function(data){
+    var forward="https:\/\/www.instagram.com\/rbxgnrt\/";
+	CPABUILDSETTINGS.onComplete=function(data){
         window.location=forward;
         return false;
     };
